# spuxx-dev-mono

./: .gitignore  .prettierrc.mjs  Cargo.toml  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: main.yml  pull_request.yml  quality_gates.yml  release_spuxx_astro.yml
.release-please/: config.json  manifest.json
apps/constellation-dashboard/: astro.config.mjs  package.json
apps/constellation-dashboard/src/: Layout.astro  styles.css
apps/constellation-dashboard/src/components/: Link.tsx
apps/constellation-dashboard/src/pages/: index.astro
apps/spuxx-api/: CHANGELOG.md  Dockerfile  README.md  package.json  vitest.config.mts
apps/spuxx-api/src/: app.controller.test.ts  app.controller.ts  app.module.ts  main.ts
apps/spuxx-astro/: CHANGELOG.md  Dockerfile  README.md  astro.config.mjs  package.json  tsconfig.json
apps/spuxx-astro/src/: consts.ts
apps/spuxx-client/: CHANGELOG.md  index.html  package.json  vite.config.ts
apps/spuxx-client/src/: App.tsx  bootstrap.ts  index.tsx
apps/spuxx-loco/: Cargo.toml  README.md  plan.md
apps/spuxx-loco/config/: development.yaml  production.yaml  test.yaml
apps/spuxx-loco/src/: app.rs  config.rs  lib.rs
apps/spuxx-loco/src/config/: env.rs
apps/spuxx-loco/src/home/: controller.rs  view.rs
apps/spuxx-loco/src/openapi/: initializer.rs
apps/spuxx-loco/tests/: e2e.rs  mod.rs
apps/spuxx-loco/tests/requests/: home.rs
apps/toledo/: CHANGELOG.md  Dockerfile  index.html  package.json  vite.config.ts
apps/toledo/src/: bootstrap.ts
apps/toledo/src/router/: index.ts  (+1 more)
local-services/database/: docker-compose.yaml
(+139 files in other folders)
