[package]
name = "spuxx-loco"
version = "0.1.0"
authors = ["spuxx <hi@spuxx.dev>"]
edition = "2021"
publish = false
default-run = "spuxx_loco-cli"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
loco-rs = { workspace = true , features = ["cli"] }
spuxx-utils = { git = "https://github.com/spuxx-dev/rslibs.git" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
dotenvy = "0.15"
loco-openapi = { version = "0.1", features = ["full"] }

[[bin]]
name = "spuxx_loco-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
temp-env = { version = "0.3.6", features = ["async_closure"] }
